<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ProfileActivity">

    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/mybutton_1"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <EditText
        android:id="@+id/old_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/new_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_new_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:hint="Password"
        android:imeActionId="@integer/fui_min_password_length"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:hint="@string/new_pass"
        android:imeActionId="@integer/fui_min_password_length"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <Button
        android:id="@+id/changeEmail"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/mybutton_4"
        android:text="@string/btn_change"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/changePass"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/mybutton_4"
        android:text="@string/btn_change"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/send"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/mybutton_4"
        android:text="@string/btn_send"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/remove"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/mybutton_4"
        android:text="@string/btn_remove"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/change_email_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mybutton_4"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        android:text="@string/change_email"
        android:textStyle="bold" />

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/change_password"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        android:background="@drawable/mybutton_4"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sending_pass_reset_button"
        android:background="@drawable/mybutton_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        android:text="@string/send_password_reset_email"
        android:textStyle="bold" />

    <Button
        android:id="@+id/remove_user_button"
        android:background="@drawable/mybutton_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/remove_user"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sign_out"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/mybutton_4"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_sign_out"
        android:textColor="@android:color/white"
        android:textStyle="bold" />


</LinearLayout>
